# server.js
@@ -1,6 +1,5 @@
 require('dotenv').config();
 const express = require('express');
-// const cookieparser = require('cookie-parser');
 const path = require('path');
 const mongoose = require('mongoose');
 const cors = require('cors');
@@ -8,75 +7,60 @@ const passport = require('passport');
 const corsOptions = require('./config/corsOptions');
 const session = require('express-session');
 const swaggerUI = require('swagger-ui-express');
-const swaggerJsDoc= require('swagger-jsdoc');
-const {specs} = require('./config/swagger')
+const { specs } = require('./config/swagger');
 const dbConn = require('./config/dbConn');
-require('./controllers/passport');
 const errorHandler = require('./middlewares/errorHandler');
 const verifyJwt = require('./middlewares/verifyJwt');
 const credentials = require('./middlewares/credentials');
 const isLoggedin = require('./middlewares/isLoggedin');
-const cookieParser = require('cookie-parser');
-const PORT = process.env.PORT ||3000;
+const swaggerJson = require('./swagger.json')
+require('./controllers/passport');
+// const cookieParser = require('cookie-parser');
+const PORT = process.env.PORT || 3000;
 const app = express();
-app.use(session({secret:'cats',resave:false,saveUninitialized:false}));
+dbConn();
+app.use(session({ secret: process.env.SECRET, resave: false, saveUninitialized: false }));
 app.use(passport.initialize());
 app.use(passport.session())
-dbConn();
- 
-app.set('view engine','ejs');
+app.set('view engine', 'ejs');
 app.use(credentials);
 app.use(cors(corsOptions))
 app.use(express.json());
-app.use(express.urlencoded({extended:false}));
-app.use(cookieParser())
-app.use('/api-docs',swaggerUI.serve,swaggerUI.setup(specs));
-app.use('/public',express.static('public'));
-// app.use(cookieparser());
-app.get('/',(req,res)=>{
+app.use(express.urlencoded({ extended: false }));
+// app.use(cookieParser())
+app.use('/api-docs', swaggerUI.serve, swaggerUI.setup(swaggerJson));
+app.use('/public', express.static('public'));
+app.get('/', (req, res) => {
     res.render('login')
-    // res.send('<a href="/auth/google">Authenticate with Google</a>');
 });
 app.get('/auth/google',
-    passport.authenticate('google',{scope:['email','profile']})
+    passport.authenticate('google', { scope: ['email', 'profile'] })
 )
 app.get('/google/callback',
-passport.authenticate('google',
-{
-    successRedirect:'/protected',
-    failureRedirect:'/auth/failure'
-}))
-app.get('/auth/failure',(req,res)=>{
+    passport.authenticate('google',
+        {   successRedirect: '/protected',
+            failureRedirect: '/auth/failure'
+        }))
+app.get('/auth/failure', (req, res) => {
     res.send('something went wrong!!')
 })
-app.get('/protected',isLoggedin,(req,res)=>{
+app.get('/protected', isLoggedin, (req, res) => {
     res.send(`hello ${req.user.displayName}`)
 })
-app.get('/passportlogout',(req,res)=>{
+app.get('/passportlogout', (req, res) => {
     res.logout();
     res.send('Go to the login page!')
 })
-app.use('/register',require('./routes/register'));
-app.use('/auth',require('./routes/auth'));
-app.use('/refresher',require('./routes/refresher'));
-app.use('/logout',require('./routes/logout'));
+app.use('/register', require('./routes/register'));
+app.use('/auth', require('./routes/auth'));
+app.use('/refresher', require('./routes/refresher'));
+app.use('/logout', require('./routes/logout'));
 // app.use(verifyJwt);
-app.use('/api/users',require('./routes/api/users'));
-app.all('*',(req,res)=>{
-    if(req.accepts('html')){
-        res.send('404 Not Found')
-    }
-    else if(req.acceptsCharsets('json')){
-        res.json({"memssage":"Not found "})
-    }
-else{
-    res.type('text').send(" 404 not found!!")
-}
-})
+app.use('/api/users', require('./routes/api/users'));
 app.use(errorHandler)
 mongoose.connection.once('open',
-()=>{
-    console.log('connected Successfully to mongodb');
-    app.listen(PORT,()=>console.log(`App listening on Port ${PORT}`));
-}
-    );
+    () => {
+        console.log('connected Successfully to mongodb');
+        app.listen(PORT, () => console.log(`App listening on Port ${PORT}`));
+    }
+);
