# swagger.json
@@ -3,15 +3,222 @@
     "info": {
         "description": "R&HOUSEMATES BACKEND API",
         "version": "1.0.0",
-        "title": "Reboost REST Api Challenge",
+        "title": "R&HOUSEMATES BACKEND API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "R&HOUSEMATE",
-            "email": "pacisnkubito@gmail.com || pacisprogramming@gmail.com"
+            "email": "contact.housemates@gmail.com"
         },
         "license": {
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        }
+    },
+    "tags": [
+        {
+            "name": "Users",
+            " description": " The Users managing API"
+        }
+    ],
+    "paths": {
+        "/api/users": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Returns the list of all the users",
+                "description": "Returns the list of all the users",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User found successfully!"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "401": {
+                        "description": "Unauthorised"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Create a new User",
+                "description": "Create a new User",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "formData",
+                        "name": "fullName",
+                        "description": "Username of the user",
+                        "type": "string",
+                        "required": "true"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "Email",
+                        "description": "Email of the user",
+                        "type": "string",
+                        "required": "true"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "Password",
+                        "description": "Password of the user",
+                        "type": "string",
+                        "required": "true"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Invalid data"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/api/users/{id}": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "description": "Getting a user by id",
+                "summary": "Getting a user by id",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The autogenerated id of the user",
+                        "type": "string",
+                        "required": "true"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "400": {
+                        "description": "Invalid data"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            },
+            "delete":{
+                "description":"Delete a user by id",
+                "summary":"Delete a user by id",
+                "tags":["Users"],
+                "produces":["application/json"],
+                "parameters":[
+                    {"in":"path",
+                    "name":"id",
+                    "description":"The auto-generated id of the user",
+                    "type":"string",
+                    "required":"true"
+                }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No content"
+                    },
+                    "400": {
+                        "description": "Invalid data"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+
+            },
+            "put":{
+                "description":"Update the user by Id",
+                "summary":"Update the user by Id",
+                "tags":["Users"],
+                "produces":["application/json"],
+                "parameters":[
+                    {
+                        "in": "formData",
+                        "name": "fullName",
+                        "description": "Username of the user",
+                        "type": "string",
+                        "required": "true"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "Email",
+                        "description": "Email of the user",
+                        "type": "string",
+                        "required": "true"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "Password",
+                        "description": "Password of the user",
+                        "type": "string",
+                        "required": "true"
+                    },
+                  
+                    { 
+                    "in":"path",
+                    "name":"id",
+                    "description":"Id of the user",
+                    "type":"string",
+                    "required":"true"
+                }
+
+                    
+                ],
+                "responses":{
+                 
+                        "200": {
+                            "description": "Success"
+                        },
+                        "203": {
+                            "description": "Updated"
+                        },
+                        "400": {
+                            "description": "Invalid data"
+                        },
+                        "404": {
+                            "description": "Not found"
+                        },
+                        "500": {
+                            "description": "Internal server error"
+                        }
+                    
+                }
+
+            }
         }
     }
 }
